Fix overflow of image container

--- a/app/assets/stylesheets/click-tok-theme/orders/index.css
+++ b/app/assets/stylesheets/click-tok-theme/orders/index.css
@@ -177,6 +177,7 @@
   height: 6em;
   justify-content: center;
   width: 6em;
+  overflow: hidden;
 }
 
 .product-image {
